feat(timeline): 添加轨道静音和独奏功能
- 在 TimelineTrackListState 中添加静音和独奏状态管理
- 实现 isEffectivelyMuted 方法用于综合判断轨道静音状态
- 更新 TrackRenderer 绘制静音和独奏图标按钮
- 添加静音独奏按钮的悬停提示和颜色状态
- 修改 TimelineRenderer 跳过